tests/paczka1/small_fuzzy/61159996.err
Error in line 2: S791 A226 8,4
Error in line 13: G938Yos S160 28,0
Error in line 14: dYJRmxOdr S160 67,9
